[tool.poetry]
name = "sending"
version = "0.1.1"
description = "Library for pub/sub usage within an async application"
authors = ["Nicholas Wold <nick@nicholaswold.com>"]

[tool.poetry.dependencies]
python = "^3.8"
prometheus-client = "^0.11.0"
aioredis = {extras = ["hiredis"], version = "^2.0.0", optional = true}

[tool.poetry.extras]
redis = ["aioredis"]

[tool.poetry.dev-dependencies]
pytest = "^6.2"
tox = "^3.24.1"
black = "^21.7b0"
flake8 = "^3.9.2"
pytest-asyncio = "^0.15.1"
isort = "^5.9.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
env = ["SENDING__ENABLE_LOGGING=True"]
markers = ["redis"]

[tool.black]
line-length = 100

[tool.isort]
line_length = 100
multi_line_output = 3
include_trailing_comma = true
