[tool.poetry]
name = "sending"
version = "0.2.2"
description = "Library for pub/sub usage within an async application"
authors = ["Nicholas Wold <nick@nicholaswold.com>"]

[tool.poetry.dependencies]
python = "^3.9"
aioredis = {extras = ["hiredis"], version = "^2.0.0", optional = true}
jupyter_client = {version = "^7.3.0", optional = true}

[tool.poetry.extras]
redis = ["aioredis"]
jupyter = ["jupyter_client"]

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pytest-mock = "^3.7.0"
black = "^22.3.0"
flake8 = "^4.0.1"
pytest-asyncio = "^0.19"
isort = "^5.10.1"
nox = "^2022.1.7"
managed-service-fixtures = "^0.1.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
markers = ["redis", "jupyter"]
asyncio_mode = "auto"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.black]
line-length = 100

[tool.isort]
line_length = 100
multi_line_output = 3
include_trailing_comma = true
